<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/createPassword_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/createPassword_tv_title"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/createPassword_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createPassword_tv_long"
            android:textSize="18sp"
            tools:ignore="InefficientWeight" />

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            tools:ignore="HardcodedText" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="12"
            android:splitTrack="false"
            android:layout_alignParentBottom="true"

            tools:ignore="InefficientWeight,ObsoleteLayoutParam" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <CheckBox
            android:id="@+id/checkBox_uppercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/Uppercase" />

        <CheckBox
            android:id="@+id/checkBox_lowercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/lowerCase" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <CheckBox
            android:id="@+id/checkBox_specialchar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.77"
            android:text="@string/specialChar" />

        <CheckBox
            android:id="@+id/checkBox_digital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/digital" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <Button
            android:id="@+id/button_cancal"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancal"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_determine"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/determine"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
