<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_password_title"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="DisableBaselineAlignment,UselessLeaf">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:orientation="vertical"
        tools:ignore="InefficientWeight,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            tools:ignore="NestedWeights,UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_name"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/edit_textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/pwd_name"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:ignore="HardcodedText,NestedWeights" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="HardcodedText,LabelFor" />
    </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment,UselessLeaf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="vertical"
            tools:ignore="InefficientWeight,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:orientation="horizontal"
                tools:ignore="NestedWeights,UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_user"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/edit_textView_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pwd_username"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText,NestedWeights" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="HardcodedText,LabelFor" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="vertical"
            tools:ignore="InefficientWeight,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:orientation="horizontal"
                tools:ignore="NestedWeights,UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_menu_password"
                    tools:ignore="ContentDescription"  />

                <TextView
                    android:id="@+id/edit_textView_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/pwd_pass"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText,LabelFor,TextViewEdits" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="HardcodedText,LabelFor,TextFields" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_button_cancal"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/colorBackground"
            android:text="@string/cancal"
            android:textSize="18sp" />

        <Button
            android:id="@+id/edit_button_submit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/colorBackground"
            android:text="@string/submit_password_edit_update"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
